⟴Experimental launcher EXE.