@@ -187,6 +187,24 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<id>timestamp-property</id>
+						<goals>
+							<goal>timestamp-property</goal>
+						</goals>
+						<phase>validate</phase>
+						<configuration>
+							<name>currentYear</name>
+							<pattern>yyyy</pattern>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
@@ -231,6 +249,48 @@
 					<doCheck>false</doCheck>
 					<doUpdate>false</doUpdate>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.akathist.maven.plugins.launch4j</groupId>
+				<artifactId>launch4j-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>l4j-clui</id>
+						<phase>package</phase>
+						<goals>
+							<goal>launch4j</goal>
+						</goals>
+						<configuration>
+							<headerType>gui</headerType>
+							<outfile>target/RunMe.exe</outfile>
+							<jar>target/RunMe.jar</jar>
+							<errTitle>Terminal Recall</errTitle>
+							<classPath>
+								<mainClass>org.jtrfp.trcl.flow.RunMe</mainClass>
+								<addDependencies>false</addDependencies>
+								<preCp>anything</preCp>
+							</classPath>
+							<jre>
+								<minVersion>1.7.0</minVersion>
+								<opts>
+									<opt>-Djava.endorsed.dirs=./endorsed</opt>
+								</opts>
+							</jre>
+							<versionInfo>
+								<fileVersion>0.0.0.1</fileVersion>
+								<txtFileVersion>${buildNumber}</txtFileVersion>
+								<fileDescription>Enhancement engine for Terminal Velocity and
+									Fury3</fileDescription>
+								<copyright>${project.inceptionDate}-${currentYear}</copyright>
+								<productVersion>1.0.0.0</productVersion>
+								<txtProductVersion>Version 1</txtProductVersion>
+								<productName>Terminal Recall</productName>
+								<internalName>TerminalRecall</internalName>
+								<originalFilename>RunMe.exe</originalFilename>
+							</versionInfo>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
